--- a/Class01/ga_press_release/index.html
+++ b/Class01/ga_press_release/index.html
@@ -11,16 +11,16 @@
 		<p>General Assembly, which started in New York as a startup incubator, now offers classes and workshops in technology, design, and entrepreneurship, with campuses around the world in:</p>
 	
 		<ul>
-		<li>Berlin</li>li>
+		<li>Berlin</li>
 		<li>Boston</li>
-		<li>Hong Kong</li>li>
+		<li>Hong Kong</li>
 		<li>London</li>li>
 		<li>Los Angeles</li>  
-		<li>New York City</li>li>
-		<li>San Francisco</li>li>
-		<li>Sydney</London<>li>
-		<li>Washington D.C</ul>li>
-	</li>ul>
+		<li>New York City</li>
+		<li>San Francisco</li>
+		<li>London</li>
+		<li>Washington D.C</li>
+	</ul>
 
 		<p>For more information, visit <a href="http://generalassembly.ly">General Assembly's website <a>.
 	</body>
