--- a/Class03/relaxr/index.html
+++ b/Class03/relaxr/index.html
@@ -8,19 +8,50 @@
 		<title>Blank Template</title>
 
 		<!-- external CSS link -->
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,800' rel='stylesheet' type='text/css'>
+
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+
 
 	</head>
 	<body>
 		<div id="container">
 			<header>
-				<h1>Blank Template</h1>
-				<h2>Just another blank template</h2>
+				<h1>Relaxr</h1>
+				<h2>Get a piece of mind with a single tap</h2>
+				<h3>
+				<div class="box"> Get it Now
+				</div>
+				</h3>
 			</header>
-			<footer>
-				&copy; Footer Goes Here
-			</footer>
-		</div><!-- #container -->
+			<section>
+				<h3> Benefits </h3> 
+					<div class="benefits"> The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
+				
+						<li>Schedule meetings for you</li>
+						<li>Excel automation to complete your work for you</li>
+						<li>Responds to emails on your behalf</li>
+						<li>Does all your work for you with our revolutionary AI technology</li>
+					</div>
+			</section>
+		</div>
+		
+				<div id="background">
+					<div class="quote"> “Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.” 
+					<div class="name"> Amanda, Intuit</div>
+			    	</div>
+			    </div>
+
+
+			<h5>
+			<div>Sign Up Now!</div></h5>
+		</article>
+
+		<footer>
+
+			<h1><span>Relaxr</span></h1>
+				&copy; Copyright 2015. Relaxr.
+		</footer>
 	</body>
 </html>
