Homework added for relax responsive

--- a/Class05/layout_challenge/five_column/index.html
+++ b/Class05/layout_challenge/five_column/index.html
@@ -11,31 +11,16 @@
 			Header
 		</div>
 	</header>
-	<article class="article_1">
+	<article>
 		<div class="placeholder">
-			Article 1
+			Article
 		</div>
 	</article>
-	<article class="article_2">
+	<aside>
 		<div class="placeholder">
-			Article 2
+			Side1
 		</div>
-	</article>
-	<section class="section_1">
-		<div class="placeholder">
-			Section 1
-		</div>
-	</section>
-	<section class="section_2">
-		<div class="placeholder">
-			Section 2
-		</div>
-	</section>
-	<section class="section_3">
-		<div class="placeholder">
-			Section 3
-		</div>
-	</section>
+	</aside>
 	<footer>
 		<div class="placeholder">
 			Footer
